--- a/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
+++ b/MemoryMosaic/Styles/Components/FullscreenViewer/FullscreenViewer.scss
@@ -126,6 +126,14 @@
 				width: 240px;
 			}
 		}
+		
+		#compression {
+			@include flex-col;
+			
+			> select {
+				width: fit-content;
+			}			
+		}
 
 		> textarea {
 			@include available-width;
