Rename Connection to Database, and update global usings

--- a/MemoryMosaic/Pages/Collections.razor
+++ b/MemoryMosaic/Pages/Collections.razor
@@ -67,7 +67,7 @@
 
     private void GetCollections()
     {
-        collections = C.GetCollections(showAlbums, showFolders, showReadonly, sortMode);
+        collections = D.GetCollections(showAlbums, showFolders, showReadonly, sortMode);
         StateHasChanged();
     }
 
