Basic start to Compressor page

--- a/MemoryMosaic/Shared/NavMenu.razor
+++ b/MemoryMosaic/Shared/NavMenu.razor
@@ -14,6 +14,7 @@
 	<NavLink class="navLink" href="search" Match="NavLinkMatch.All"><MaterialIcon Icon="search"/><span>Search</span></NavLink>
     <NavLink class="navLink" href="trash" Match="NavLinkMatch.All"><MaterialIcon Icon="trash"/><span>Trash</span></NavLink>
     <NavLink class="navLink" href="settings" Match="NavLinkMatch.All"><MaterialIcon Icon="settings"/><span>Settings</span></NavLink>
+    <NavLink class="navLink" href="compressor" Match="NavLinkMatch.All"><MaterialIcon Icon="compress"/><span>Compressor</span></NavLink>
 
     @if (Program.Debug)
     {
