--- a/MemoryMosaic/Pages/Compressor/CompressorItem.razor
+++ b/MemoryMosaic/Pages/Compressor/CompressorItem.razor
@@ -6,5 +6,5 @@
 
 @code {
 	[Parameter, EditorRequired]
-	public required Media Item { get; set; }
+	public required ImportItem Item { get; set; }
 }
