Compressor page automatically rerenders when items enqueued and dequeued

--- a/MemoryMosaic/Pages/Compressor/Compressor.razor
+++ b/MemoryMosaic/Pages/Compressor/Compressor.razor
@@ -29,6 +29,9 @@
 @code {
 	protected override void OnInitialized()
 	{
+		C.ItemEnqueued += (_, _) => InvokeAsync(StateHasChanged);
+		C.ItemDequeued += (_, _) => InvokeAsync(StateHasChanged);
+	}
 
 	private static string HeaderText
 	{
