CC now trims the name of the new collection

--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -78,7 +78,7 @@
             return;
         }
 
-        D.CreateCollection(NewCollectionName, folder);
+        D.CreateCollection(NewCollectionName.Trim(), folder);
         OnCollectionCreate?.Invoke();
         AcceptingInput = folder = false;
         StateHasChanged();
