Disable $Debug in Constants.scss

--- a/MemoryMosaic/Styles/Constants.scss
+++ b/MemoryMosaic/Styles/Constants.scss
@@ -1,4 +1,5 @@
-$Debug: true;
+//$Debug: true;
+$Debug: false;
 $AccentColor: #0080ff;
 $HoverColor: rgba(211, 211, 211, 0.1);
 $CoverBackground: #212121;
