Possible slight optimization to deleting individual library items in import

--- a/MemoryMosaic/Shared/Import/LibraryItemDisplay.razor
+++ b/MemoryMosaic/Shared/Import/LibraryItemDisplay.razor
@@ -20,12 +20,13 @@
 </div>
 
 @code {
-	private void DeleteBtnClick()
+	private async void DeleteBtnClick()
 	{
+		Import.LibraryCache.Remove(Item.Path);
+		await Import.RerenderAsync();
+		
 		if (Item.DateDeleted == null)
 			D.MoveToTrash(Item.Id);
 		D.RemoveFromTrash(Item);
-		Import.LibraryCache.Remove(Item.Path);
-		Import.Rerender();
 	}
 }
